# PreSumm

./: pyproject.toml  requirements.txt
data/scisummnet/: test.jsonl  val.jsonl
json_data/scisummnet/: scisummnet.test.0.json  scisummnet.valid.0.json
json_data/scitldr/: scitldr.test.0.json  scitldr.train.0.json  scitldr.valid.0.json
src/: preprocess.py  train.py  train_extractive.py
src/models/: data_loader.py  model_builder.py  predictor.py  reporter.py  reporter_ext.py  trainer.py  trainer_ext.py
src/prepro/: data_builder.py
src/sobamchan/: build_json.py
