[tool.poetry]
name = "presumm"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sienna = "^0.1.5"
spacy = "^3.5.0"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
black = "^23.1.0"
ipython = "^8.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
